--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
 	"main": "src/index.ts",
 	"author": "Zoe Roux <zoe.roux@sdg.moe>",
 	"license": "MIT",
+	"scripts": {
+		"expo": "yarn workspace expo-example start",
+		"lint": "eslint . --ext .ts,.tsx "
+	},
 	"workspaces": [
 		"packages/*"
 	],
@@ -18,6 +22,8 @@
 		"tsdoc": true
 	},
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.42.0",
+		"@typescript-eslint/parser": "^5.42.0",
 		"eslint": "8.19.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-header": "^3.1.1",
