--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,17 @@
 {
 	"name": "@yoshiki/react",
+	"version": "1.0.0",
+	"main": "src/index.ts",
+	"types": "src/index.ts",
 	"packageManager": "yarn@3.2.4",
 	"dependencies": {
 		"@yoshiki/core": "workspace:^"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.24",
+		"typescript": "^4.8.4"
+	},
+	"peerDependencies": {
+		"react": "*"
 	}
 }
