--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
 	"main": "src/index.ts",
 	"author": "Zoe Roux <zoe.roux@sdg.moe>",
 	"license": "MIT",
+	"private": true,
 	"scripts": {
 		"lint": "eslint . --ext .ts,.tsx "
 	},
 	"workspaces": [
-		"packages/*"
+		"packages/*",
+		"examples/*"
 	],
 	"prettier": {
 		"useTabs": true,
