Add breakpoints support

--- a/examples/expo-example/app.json
+++ b/examples/expo-example/app.json
@@ -27,9 +27,7 @@
 		},
 		"web": {
 			"build": {
-				"babel": {
-					"include": ["@yoshiki/native", "@yoshiki/core"]
-				}
+				"bundler": "metro"
 			},
 			"favicon": "./assets/favicon.png"
 		}
