--- a/package.json
+++ b/package.json
@@ -8,10 +8,20 @@
 	"scripts": {
 		"lint": "eslint . --ext .ts,.tsx "
 	},
-	"workspaces": [
-		"packages/*",
-		"examples/*"
-	],
+	"workspaces": {
+		"packages": [
+			"packages/*",
+			"examples/*"
+		],
+		"nohoist": [
+			"**/react",
+			"**/react/**",
+			"**/react-dom",
+			"**/react-dom/**",
+			"**/react-native",
+			"**/react-native/**"
+		]
+	},
 	"prettier": {
 		"useTabs": true,
 		"printWidth": 100,
