Add SSR support

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 			"**/react-dom",
 			"**/react-dom/**",
 			"**/react-native",
-			"**/react-native/**"
+			"**/react-native/**",
+			"**/typescript/**"
 		]
 	},
 	"prettier": {
