--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -8,6 +8,8 @@
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.24",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"typescript": "^4.8.4"
 	},
 	"peerDependencies": {
