--- a/examples/next-example/package.json
+++ b/examples/next-example/package.json
@@ -12,7 +12,7 @@
 		"@types/node": "18.11.9",
 		"@types/react": "18.0.25",
 		"@types/react-dom": "18.0.8",
-		"@yoshiki/react": "*",
+		"yoshiki": "*",
 		"eslint": "8.27.0",
 		"eslint-config-next": "13.0.2",
 		"next": "13.0.2",
