--- a/examples/expo-example/package.json
+++ b/examples/expo-example/package.json
@@ -11,20 +11,20 @@
 	"dependencies": {
 		"@expo/html-elements": "^0.2.0",
 		"@expo/webpack-config": "^0.17.0",
-		"yoshiki": "*",
 		"expo": "~46.0.16",
 		"expo-status-bar": "~1.4.0",
 		"react": "18.0.0",
 		"react-dom": "18.0.0",
 		"react-native": "0.69.6",
 		"react-native-svg": "12.3.0",
-		"react-native-web": "~0.18.7"
+		"react-native-web": "~0.18.7",
+		"yoshiki": "*"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.19.6",
 		"@types/react": "~18.0.14",
 		"@types/react-native": "~0.69.1",
-		"typescript": "~4.3.5"
+		"typescript": "~4.8.4"
 	},
 	"private": true
 }
