--- a/examples/next-example/package.json
+++ b/examples/next-example/package.json
@@ -9,16 +9,18 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@types/node": "18.11.9",
-		"@types/react": "18.0.25",
-		"@types/react-dom": "18.0.8",
-		"yoshiki": "*",
-		"eslint": "8.27.0",
-		"eslint-config-next": "13.0.2",
-		"next": "13.0.2",
+		"next": "13.0.3",
 		"next-transpile-modules": "^10.0.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"yoshiki": "workspace:^"
+	},
+	"devDependencies": {
+		"@types/node": "18.11.9",
+		"@types/react": "18.0.25",
+		"@types/react-dom": "18.0.8",
+		"eslint": "8.27.0",
+		"eslint-config-next": "13.0.3",
 		"typescript": "4.8.4"
 	}
 }
