Add react-native auto-selection (still need typescript types)

--- a/packages/yoshiki/tsconfig.json
+++ b/packages/yoshiki/tsconfig.json
@@ -16,10 +16,7 @@
 		"isolatedModules": true,
 		"jsx": "react-native",
 		"incremental": true,
-		"baseUrl": ".",
-		"paths": {
-			"~/*": ["src/*"]
-		}
+		"rootDir": "src/"
 	},
 	"include": ["**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules"]
