--- a/packages/yoshiki/package.json
+++ b/packages/yoshiki/package.json
@@ -2,6 +2,7 @@
 	"name": "yoshiki",
 	"version": "1.0.0",
 	"main": "src/index.ts",
+	"react-native": "src/native/index.ts",
 	"types": "src/index.ts",
 	"exports": {
 		".": "./src/index.ts",
@@ -18,6 +19,7 @@
 		}
 	},
 	"devDependencies": {
+		"@types/node": "^18.11.9",
 		"@types/react": "^18.0.24",
 		"@types/react-native": "~0.69.1",
 		"react": "^18.2.0",
