--- a/examples/expo-example/package.json
+++ b/examples/expo-example/package.json
@@ -26,5 +26,8 @@
 		"@types/react-native": "~0.69.1",
 		"typescript": "~4.8.4"
 	},
+	"installConfig": {
+		"hoistingLimits": "workspaces"
+	},
 	"private": true
 }
