--- a/examples/expo-example/package.json
+++ b/examples/expo-example/package.json
@@ -9,22 +9,22 @@
 		"web": "expo start --web"
 	},
 	"dependencies": {
-		"@expo/html-elements": "^0.2.0",
-		"@expo/webpack-config": "^0.17.0",
-		"expo": "~46.0.16",
-		"expo-status-bar": "~1.4.0",
-		"react": "18.0.0",
-		"react-dom": "18.0.0",
-		"react-native": "0.69.6",
-		"react-native-svg": "12.3.0",
-		"react-native-web": "~0.18.7",
+		"@expo/html-elements": "^0.2.2",
+		"@expo/webpack-config": "^0.17.3",
+		"expo": "^47.0.3",
+		"expo-status-bar": "~1.4.2",
+		"react": "18.1.0",
+		"react-dom": "18.1.0",
+		"react-native": "0.70.5",
+		"react-native-svg": "13.4.0",
+		"react-native-web": "~0.18.10",
 		"yoshiki": "*"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.19.6",
-		"@types/react": "~18.0.14",
-		"@types/react-native": "~0.69.1",
-		"typescript": "~4.8.4"
+		"@babel/core": "^7.20.2",
+		"@types/react": "~18.0.25",
+		"@types/react-native": "~0.70.6",
+		"typescript": "^4.8.4"
 	},
 	"installConfig": {
 		"hoistingLimits": "workspaces"
