--- a/examples/next-example/package.json
+++ b/examples/next-example/package.json
@@ -22,5 +22,8 @@
 		"eslint": "8.27.0",
 		"eslint-config-next": "13.0.3",
 		"typescript": "4.8.4"
+	},
+	"installConfig": {
+		"hoistingLimits": "workspaces"
 	}
 }
