--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 	"license": "MIT",
 	"private": true,
 	"scripts": {
+		"next": "yarn workspace next-example dev",
+		"expo": "yarn workspace expo-example dev",
 		"lint": "eslint . --ext .ts,.tsx "
 	},
 	"workspaces": {
@@ -25,14 +27,14 @@
 		"tsdoc": true
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.42.0",
-		"@typescript-eslint/parser": "^5.42.0",
-		"eslint": "8.19.0",
+		"@typescript-eslint/eslint-plugin": "^5.42.1",
+		"@typescript-eslint/parser": "^5.42.1",
+		"eslint": "8.27.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-header": "^3.1.1",
 		"prettier": "^2.7.1",
-		"prettier-plugin-jsdoc": "^0.3.38",
-		"typescript": "4.7.4"
+		"prettier-plugin-jsdoc": "^0.4.2",
+		"typescript": "4.8.4"
 	},
 	"packageManager": "yarn@3.2.4"
 }
