--- a/packages/yoshiki/package.json
+++ b/packages/yoshiki/package.json
@@ -1,11 +1,28 @@
 {
 	"name": "yoshiki",
-	"version": "1.0.0",
-	"main": "src/index.ts",
-	"types": "src/index.ts",
+	"version": "0.1.0",
+	"author": "Zoe Roux <zoe.roux@sdg.moe> (https://github.com/AnonymusRaccoon)",
+	"license": "MIT",
+	"keywords": [
+		"react",
+		"react-native",
+		"css-in-js"
+	],
+	"repository": "https://github.com/AnonymusRaccoon/yoshiki",
+	"homepage": "https://github.com/AnonymusRaccoon/yoshiki",
+	"bugs": {
+		"url": "https://github.com/AnonymusRaccoon/yoshiki/issues"
+	},
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"source": "src/index.ts",
 	"exports": {
-		".": "./src/index.ts",
-		"./native": "./src/native/index.ts"
+		".": "./dist/index.ts",
+		"./native": "./dist/native/index.ts",
+		"./web": "./dist/index.ts"
+	},
+	"scripts": {
+		"build": "tsc --build ."
 	},
 	"packageManager": "yarn@3.2.4",
 	"peerDependencies": {
