--- a/packages/yoshiki/package.json
+++ b/packages/yoshiki/package.json
@@ -13,14 +13,9 @@
 	"bugs": {
 		"url": "https://github.com/AnonymusRaccoon/yoshiki/issues"
 	},
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
+	"main": "src/index.ts",
+	"types": "src/index.ts",
 	"source": "src/index.ts",
-	"exports": {
-		".": "./dist/index.ts",
-		"./native": "./dist/native/index.ts",
-		"./web": "./dist/index.ts"
-	},
 	"scripts": {
 		"build": "tsc --build ."
 	},
