--- a/packages/yoshiki/tsconfig.json
+++ b/packages/yoshiki/tsconfig.json
@@ -19,5 +19,5 @@
 		"outDir": "dist/"
 	},
 	"include": ["src/**/*.ts", "src/**/*.tsx"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules", "dist"]
 }
