Require a key for the theme

--- a/packages/yoshiki/package.json
+++ b/packages/yoshiki/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "yoshiki",
-	"version": "0.3.5",
+	"version": "0.4.5",
 	"author": "Zoe Roux <zoe.roux@sdg.moe> (https://github.com/AnonymusRaccoon)",
 	"license": "MIT",
 	"keywords": [
@@ -26,8 +26,7 @@
 		"@types/node": "18.x.x",
 		"@types/react": "18.x.x",
 		"@types/react-native": ">= 0.70.0",
-		"inline-style-prefixer": "^7.0.0",
-		"object-hash": "^3.0.0"
+		"inline-style-prefixer": "^7.0.0"
 	},
 	"peerDependencies": {
 		"react": "*",
@@ -44,7 +43,6 @@
 	},
 	"devDependencies": {
 		"@types/inline-style-prefixer": "^5.0.0",
-		"@types/object-hash": "^3.0.2",
 		"react": "18.x.x",
 		"react-dom": "^18.2.0",
 		"react-native-web": "^0.18.10",
