Support child states for react native

--- a/examples/expo-example/app.json
+++ b/examples/expo-example/app.json
@@ -3,7 +3,7 @@
 		"name": "expo-example",
 		"slug": "expo-example",
 		"version": "1.0.0",
-		"orientation": "portrait",
+		"orientation": "default",
 		"icon": "./assets/icon.png",
 		"entryPoint": "./src/app.tsx",
 		"userInterfaceStyle": "light",
