--- a/packages/yoshiki/package.json
+++ b/packages/yoshiki/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "yoshiki",
-	"version": "1.2.2",
+	"version": "1.2.3",
 	"author": "Zoe Roux <zoe.roux@sdg.moe> (https://github.com/zoriya)",
 	"license": "MIT",
 	"keywords": [
@@ -13,8 +13,8 @@
 	"bugs": {
 		"url": "https://github.com/zoriya/yoshiki/issues"
 	},
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
+	"main": "src/index.ts",
+	"types": "src/index.ts",
 	"source": "src/index.ts",
 	"scripts": {
 		"build": "tsc --build .",
